--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                     <div class="lt warp-nav-left">
                         <b></b>
                         <ul class="nav-item">
-                            <li class="hover"><em class="icon icon-newspaper"></em><svg class="icon icon-newspaper"><use xlink:href="#icon-newspaper"></use></svg><a href="news.html">新闻资讯</a></li>
-                            <li><svg class="icon icon-images"><use xlink:href="#icon-images"></use></svg><a href="charm.html">魅力句容</a></li>
-                            <li><svg class="icon icon-images"><use xlink:href="#icon-book"></use></svg><a href="xxgk.html">信息公开</a></li>
-                            <li><svg class="icon icon-images"><use xlink:href="#icon-users"></use></svg><a href="ggfw.html">公共服务</a></li>
-                            <li><svg class="icon icon-images"><use xlink:href="#icon-comment"></use></svg><a href="">公共参与</a></li>
-                            <li><svg class="icon icon-images"><use xlink:href="#icon-earth"></use></svg><a href="group.html">站群导航</a></li>
+                            <li class="hover"><em class="icon icon-newspaper"></em><svg class="icon icon-newspaper"><use xlink:href="#icon-newspaper"></use></svg><CMSPRO_CHANNEL CODE='xwzx' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                            <li><svg class="icon icon-images"><use xlink:href="#icon-images"></use></svg><CMSPRO_CHANNEL CODE='mljr' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                            <li><svg class="icon icon-images"><use xlink:href="#icon-book"></use></svg><CMSPRO_CHANNEL CODE='xxgk' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                            <li><svg class="icon icon-images"><use xlink:href="#icon-users"></use></svg><CMSPRO_CHANNEL CODE='ggfw' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                            <li><svg class="icon icon-images"><use xlink:href="#icon-comment"></use></svg><CMSPRO_CHANNEL CODE='gzcy' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                            <li><svg class="icon icon-images"><use xlink:href="#icon-earth"></use></svg><CMSPRO_CHANNEL CODE='zqdh' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
                         </ul>
                     </div>
                     <div class="rt warp-nav-right clear">
@@ -143,11 +143,9 @@
                             <div class="lt news-focus">
                                 <div class="yx-rotaion">
                                     <ul class="rotaion_list">
-                                        <li><a href=""><img width="440" height="340" src="images/www/201555195752212.jpg" alt="郭庄镇团委、妇联和电科电气公司"></a></li>
-                                        <li><a href=""><img width="440" height="340" src="images/www/201555195752212.jpg" alt="郭庄镇团委、妇联和电科电气公司"></a></li>
-                                        <li><a href=""><img width="440" height="340" src="images/www/201555195752212.jpg" alt="郭庄镇团委、妇联和电科电气公司"></a></li>
-                                        <li><a href=""><img width="440" height="340" src="images/www/201555195752212.jpg" alt="郭庄镇团委、妇联和电科电气公司"></a></li>
-                                        <li><a href=""><img width="440" height="340" src="images/www/201555195752212.jpg" alt="郭庄镇团委、妇联和电科电气公司"></a></li>
+                                        <CMSPRO_DOCUMENTS CHANNELCODE="tpxw" DOCUMENTTYPE="0|1|2|3" NUM="5" STARTPOS="0">
+                                        <li><a href="<CMSPRO_DOCUMENT field='url'></CMSPRO_DOCUMENT>" target="_blank"><img width="440" height="340" src="<CMSPRO_APPENDIXS MODE='ALL' STARTPOS='0' NUM='1'><CMSPRO_APPENDIX FIELD='path'></CMSPRO_APPENDIX></CMSPRO_APPENDIXS>" alt="<CMSPRO_DOCUMENT field='title' NUM='20'></CMSPRO_DOCUMENT>"></a></li>
+                                        </CMSPRO_DOCUMENTS>
                                     </ul>
                                 </div>
                             </div>
@@ -156,67 +154,73 @@
                             <div class="rt news-list">
                                 <div class="new-title">
                                     <ul>
-                                        <li class="hover"><svg class="icon icon-new"><use xlink:href="#icon-new"></use></svg><a href="">今日句容</a></li>
-                                        <li><a href="">乡镇动态</a></li>
-                                        <li><a href="">部门动态</a></li>
-                                        <li><a href="">通知公告</a></li>
+                                        <li class="hover"><svg class="icon icon-new"><use xlink:href="#icon-new"></use></svg><CMSPRO_CHANNEL CODE='jrjr' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                                        <li><CMSPRO_CHANNEL CODE='xzdt' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                                        <li><CMSPRO_CHANNEL CODE='bmdt' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
+                                        <li><CMSPRO_CHANNEL CODE='tzgg' FIELD='channelName' AUTOLINK="true" NUM="10" TARGET="_blank">栏目标题</CMSPRO_CHANNEL></li>
                                     </ul>
                                 </div>
                                 <div class="new-content-box">
                                 <div class="new-content" style="display: block">
                                 <div class="new-inline">
-                                    <p class="title"><a href="">打造更具冲击力和生命力的旅游产品</a></p>
-                                    <p class="content">据悉，此次村（社区）党组织书记专题培训班为期4区）党组织书记专题培训班为期4天，其中，课堂教学重点围绕“四个全面”、党建业务、党性教育、法治教育、廉</p>
+                                    <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="1" STARTPOS="0" PAGESIZE="0" CHANNELCODE="jrjr">
+                                    <p class="title"><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="22">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT></p>
+                                    <p class="content"><CMSPRO_DOCUMENT FIELD="content" NUM="86">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</CMSPRO_DOCUMENT></p>
+                                    </CMSPRO_DOCUMENTS>
                                 </div>
                                 <div class="new-box">
                                     <ul>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
+                                        <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="6" STARTPOS="1" PAGESIZE="0" CHANNELCODE="jrjr">
+                                        <li><i></i><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="24">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT><span><CMSPRO_DOCUMENT FIELD=" publishedTime " DATEFORMAT="MM-dd">
+                                            发布时间</CMSPRO_DOCUMENT></span></li>
+                                        </CMSPRO_DOCUMENTS>
                                     </ul>
                                 </div>
                                 </div><div class="new-content">
-                                <div class="new-inline">
-                                    <p class="title"><a href="">党组织书记专题培训班为</a></p>
-                                    <p class="content">据悉，此次村（社区）党组织书记专题培训班为期4区）党组织书记专题培训班为期4天，其中，课堂教学重点围绕“四个全面”、党建业务、党性教育、法治教育、廉</p>
-                                </div>
-                                <div class="new-box">
-                                    <ul>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                    </ul>
-                                </div>
+                                    <div class="new-inline">
+                                        <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="1" STARTPOS="0" PAGESIZE="0" CHANNELCODE="xzdt">
+                                            <p class="title"><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="22">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT></p>
+                                            <p class="content"><CMSPRO_DOCUMENT FIELD="content" NUM="86">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</CMSPRO_DOCUMENT></p>
+                                        </CMSPRO_DOCUMENTS>
+                                    </div>
+                                    <div class="new-box">
+                                        <ul>
+                                            <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="6" STARTPOS="1" PAGESIZE="0" CHANNELCODE="xzdt">
+                                                <li><i></i><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="24">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT><span><CMSPRO_DOCUMENT FIELD=" publishedTime " DATEFORMAT="MM-dd">
+                                                    发布时间</CMSPRO_DOCUMENT></span></li>
+                                            </CMSPRO_DOCUMENTS>
+                                        </ul>
+                                    </div>
                                 </div><div class="new-content">
-                                <div class="new-inline">
-                                    <p class="title"><a href="">具冲击力和生命力的旅游产品</a></p>
-                                    <p class="content">据悉，此次村（社区）党组织书记专题培训班为期4区）党组织书记专题培训班为期4天，其中，课堂教学重点围绕“四个全面”、党建业务、党性教育、法治教育、廉</p>
-                                </div>
-                                <div class="new-box">
-                                    <ul>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                    </ul>
-                                </div>
+                                    <div class="new-inline">
+                                        <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="1" STARTPOS="0" PAGESIZE="0" CHANNELCODE="bmdt">
+                                            <p class="title"><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="22">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT></p>
+                                            <p class="content"><CMSPRO_DOCUMENT FIELD="content" NUM="86">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</CMSPRO_DOCUMENT></p>
+                                        </CMSPRO_DOCUMENTS>
+                                    </div>
+                                    <div class="new-box">
+                                        <ul>
+                                            <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="6" STARTPOS="1" PAGESIZE="0" CHANNELCODE="bmdt">
+                                                <li><i></i><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="24">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT><span><CMSPRO_DOCUMENT FIELD=" publishedTime " DATEFORMAT="MM-dd">
+                                                    发布时间</CMSPRO_DOCUMENT></span></li>
+                                            </CMSPRO_DOCUMENTS>
+                                        </ul>
+                                    </div>
                                 </div><div class="new-content">
-                                <div class="new-inline">
-                                    <p class="title"><a href="">生命力的旅游产品</a></p>
-                                    <p class="content">据悉，此次村（社区）党组织书记专题培训班为期4区）党组织书记专题培训班为期4天，其中，课堂教学重点围绕“四个全面”、党建业务、党性教育、法治教育、廉</p>
-                                </div>
-                                <div class="new-box">
-                                    <ul>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                        <li><i></i><a href="">清明节前夕茅山新四军纪念馆迎来参观高峰</a><span>04-07</span></li>
-                                    </ul>
-                                </div>
+                                    <div class="new-inline">
+                                        <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="1" STARTPOS="0" PAGESIZE="0" CHANNELCODE="tzgg">
+                                            <p class="title"><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="22">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT></p>
+                                            <p class="content"><CMSPRO_DOCUMENT FIELD="content" NUM="86">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</CMSPRO_DOCUMENT></p>
+                                        </CMSPRO_DOCUMENTS>
+                                    </div>
+                                    <div class="new-box">
+                                        <ul>
+                                            <CMSPRO_DOCUMENTS DOCUMENTTYPE="0|1|2|3" NUM="6" STARTPOS="1" PAGESIZE="0" CHANNELCODE="tzgg">
+                                                <li><i></i><CMSPRO_DOCUMENT FIELD="title" AUTOLINK="true" LINKALT="true" NUM="24">标题标题标题标题标题标题标题标题标题标题标题</CMSPRO_DOCUMENT><span><CMSPRO_DOCUMENT FIELD=" publishedTime " DATEFORMAT="MM-dd">
+                                                    发布时间</CMSPRO_DOCUMENT></span></li>
+                                            </CMSPRO_DOCUMENTS>
+                                        </ul>
+                                    </div>
                                 </div>
                                 </div>
                             </div>
