--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--[if IE 8]>
     <style></style>
     <![endif]-->
-    <script data-main="../jurong/xhtml/www/script/jurong" src="www/script/lib/require.js"></script>
+    <script data-main="www/script/jurong" src="www/script/lib/require.js"></script>
 </head>
 <body>
 <!-- svg begin-->
@@ -216,7 +216,61 @@
             </div>
             <!-- 新闻资讯 end-->
             <!-- 魅力句容 begin-->
-            <div class="nav-box lt clear">魅力句容</div>
+            <div class="nav-box lt clear">
+                <div class="charm-left lt">
+                    <div class="charm-title">
+                        <a href="" class="hover">城市概览</a>
+                        <a href="">经济发展</a>
+                        <a href="">社会事业</a>
+                    </div>
+                    <div class="charm-list">
+                        <div class="charm-content">
+                            句容地处江苏中南部，长江下游南岸，东连镇江，西接南京，距上海200公里，处上海经济辐射区内。境内踞山濒江，气象万千，物华天宝，人杰地灵，为南京东南门户，历来是商家必争之地。句容是首批公布的沿海对外开放地区之一，同时也是全国综合经济实力百强县之一。全市总面积1385平方公里，人口约60万，辖8个镇，3个街道...
+                        </div>
+                    </div>
+                    <div class="charm-travel-content">
+                        <ul><a href="" title="吃" class="">
+                            <li class="eat">
+                                <svg class="icon icon-food">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-food"></use>
+                                </svg>
+                            </li>
+                        </a> <a href="" title="住">
+                            <li class="ml10 live hover">
+                                <svg class="icon icon-home2">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-home2"></use>
+                                </svg>
+                            </li>
+                        </a> <a href="" title="行" class="">
+                            <li class="go">
+                                <svg class="icon icon-automobile">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-automobile"></use>
+                                </svg>
+                            </li>
+                        </a> <a href="" title="游">
+                            <li class="ml10 tour">
+                                <svg class="icon icon-flight">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-flight"></use>
+                                </svg>
+                            </li>
+                        </a> <a href="" title="购" class="hover">
+                            <li class="shop">
+                                <svg class="icon icon-shopping-cart">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink"
+                                         xlink:href="#icon-shopping-cart"></use>
+                                </svg>
+                            </li>
+                        </a> <a href="" title="娱" class="">
+                            <li class="ml10 play">
+                                <svg class="icon icon-microphone">
+                                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-microphone"></use>
+                                </svg>
+                            </li>
+                        </a></ul>
+                    </div>
+                </div>
+                <div class="charm-right rt">right</div>
+            </div>
             <!-- 魅力句容 end-->
             <!-- 信息公开 begin-->
             <div class="nav-box lt clear">信息公开</div>
