--- a/content.html
+++ b/content.html
@@ -2,140 +2,99 @@
 <html>
 <head lang="zh-CN">
     <meta charset="UTF-8">
-    <title><CMSPRO_CHANNEL FIELD='channelName'>栏目标题</CMSPRO_CHANNEL> - 中国句容门户网站群</title>
+    <title><CMSPRO_DOCUMENT FIELD="title">标题</CMSPRO_DOCUMENT></title>
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="YangZhou-Ucap" content="true">
-    <meta name="keywords"
-          content="句容网站群,句容门户网站群,政府门户网站群,政务门户网站群,门户网站群,句容,中国句容,市长信箱,句容门户网,中国句容门户网站,句容公共服务,句容智能终端,句容政府,句容市政府,公共服务,个人门户,智能句容"/>
-    <meta name="description"
-          content="中国句容网站群,作为句容市政府第一门户网站群平台、句容政府信息公开平台、句容政务服务平台、政民互动平台、政府门户网站群、政务门户网站群、各部门门户网站群。 句容市是江苏省镇江市代管县级市，地处苏南，东连镇江，西接南京，是南京的东南门户，素有“南京新东郊、金陵御花园”之美誉，是长江三角洲一座集港口、工业、商贸、旅游为一体的新兴城市"/>
     <!--import css-->
-    <link rel="stylesheet" href="www/css/publicservice.css?v=20150424"/>
-    <script data-main="www/script/jurong" src="www/script/lib/require.js"></script>
+    <link rel="stylesheet" href="www/css/public.css"/>
+    <link rel="stylesheet" href="www/css/list.css"/>
+    <script data-main="/jurong/xhtml/www/script/jurong" src="www/script/lib/require.js"></script>
 </head>
 <body>
-<!-- top begin -->
-<!-- svg begin -->
-<svg width="0" height="0" display="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-        <symbol id="icon-newspaper" viewBox="0 0 1024 1024">
-            <title>newspaper</title>
-            <path class="path1" d="M896 256v-128h-896v704c0 35.346 28.654 64 64 64h864c53.022 0 96-42.978 96-96v-544h-128zM832 832h-768v-640h768v640zM128 320h640v64h-640zM512 448h256v64h-256zM512 576h256v64h-256zM512 704h192v64h-192zM128 448h320v320h-320z"></path>
+<!--#include virtual="/jurong/head/head.shtml"-->
+<!-- content begin-->
+<div id="page">
+    <!-- svg begin -->
+    <svg width="0" height="0" display="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+            <symbol id="icon-caret-down" viewBox="0 0 585 1024">
+                <path class="path1" d="M585.143 402.286q0 14.857-10.857 25.714l-256 256q-10.857 10.857-25.714 10.857t-25.714-10.857l-256-256q-10.857-10.857-10.857-25.714t10.857-25.714 25.714-10.857h512q14.857 0 25.714 10.857t10.857 25.714z"></path>
+            </symbol>
+            <symbol id="icon-media-stop" viewBox="0 0 1024 1024">
+                <path class="path1" d="M682.667 256h-341.333c-46.933 0-85.333 38.4-85.333 85.333v341.333c0 46.933 38.4 85.333 85.333 85.333h341.333c46.933 0 85.333-38.4 85.333-85.333v-341.333c0-46.933-38.4-85.333-85.333-85.333z"></path>
+            </symbol>
+            <symbol id="icon-location" viewBox="0 0 1024 1024">
+            <path class="path1" d="M512 1024c0 0-325.818-372.364-325.818-698.182s325.818-325.818 325.818-325.818 325.818 0 325.818 325.818-325.818 698.182-325.818 698.182zM740.352 282.531c-10.705-56.879-42.403-105.751-86.342-139.869-2.979-2.374-5.679-5.027-8.797-7.261-6.889-4.887-14.522-8.751-22.016-12.847-6.284-3.491-12.195-7.308-18.851-10.24-6.516-2.839-13.545-4.515-20.387-6.749-7.959-2.607-15.546-5.725-23.971-7.447-15.5-3.212-31.465-5.027-47.895-5.027 0 0-0.047 0-0.093 0-0.093 0-0.14 0-0.233 0-16.198 0-31.977 1.722-47.244 4.841-30.487 6.144-57.763 18.246-81.687 34.397-0.372 0.233-0.745 0.372-1.071 0.605-9.914 6.749-18.804 14.522-27.462 22.668-2.607 2.42-5.492 4.468-7.959 6.982-5.818 6.004-10.705 12.66-15.872 19.177-4.422 5.632-9.216 10.985-13.172 17.036-2.653 4.236-4.655 8.797-7.121 13.172-4.934 8.797-9.961 17.548-13.777 26.996-1.443 3.537-2.141 7.308-3.398 10.938-3.537 10.24-7.121 20.48-9.216 31.372-2.932 14.615-4.515 29.556-4.515 44.544 0 232.727 232.727 558.545 232.727 558.545s232.727-325.818 232.727-558.545c0-14.476-1.489-28.998-4.375-43.287zM372.364 325.818c0-77.126 62.511-139.636 139.636-139.636s139.636 62.511 139.636 139.636-62.511 139.636-139.636 139.636-139.636-62.511-139.636-139.636z"></path>
         </symbol>
-        <symbol id="icon-images" viewBox="0 0 1152 1024">
-            <title>images</title>
-            <path class="path1" d="M1088 128h-64v-64c0-35.2-28.8-64-64-64h-896c-35.2 0-64 28.8-64 64v768c0 35.2 28.8 64 64 64h64v64c0 35.2 28.8 64 64 64h896c35.2 0 64-28.8 64-64v-768c0-35.2-28.8-64-64-64zM128 192v640h-63.886c-0.040-0.034-0.082-0.076-0.114-0.116v-767.77c0.034-0.040 0.076-0.082 0.114-0.114h895.77c0.040 0.034 0.082 0.076 0.116 0.116v63.884h-768c-35.2 0-64 28.8-64 64v0zM1088 959.884c-0.034 0.040-0.076 0.082-0.116 0.116h-895.77c-0.040-0.034-0.082-0.076-0.114-0.116v-767.77c0.034-0.040 0.076-0.082 0.114-0.114h895.77c0.040 0.034 0.082 0.076 0.116 0.116v767.768z"></path>
-            <path class="path2" d="M960 352c0 53.020-42.98 96-96 96s-96-42.98-96-96 42.98-96 96-96 96 42.98 96 96z"></path>
-            <path class="path3" d="M1024 896h-768v-128l224-384 256 320h64l224-192z"></path>
-        </symbol>
-        <symbol id="icon-book" viewBox="0 0 1024 1024">
-            <title>book</title>
-            <path class="path1" d="M896 128v832h-672c-53.026 0-96-42.98-96-96s42.974-96 96-96h608v-768h-640c-70.398 0-128 57.6-128 128v768c0 70.4 57.602 128 128 128h768v-896h-64z"></path>
-            <path class="path2" d="M224.056 832v0c-0.018 0.002-0.038 0-0.056 0-17.672 0-32 14.326-32 32s14.328 32 32 32c0.018 0 0.038-0.002 0.056-0.002v0.002h607.89v-64h-607.89z"></path>
-        </symbol>
-        <symbol id="icon-users" viewBox="0 0 1152 1024">
-            <title>users</title>
-            <path class="path1" d="M768 770.612v-52.78c70.498-39.728 128-138.772 128-237.832 0-159.058 0-288-192-288s-192 128.942-192 288c0 99.060 57.502 198.104 128 237.832v52.78c-217.102 17.748-384 124.42-384 253.388h896c0-128.968-166.898-235.64-384-253.388z"></path>
-            <path class="path2" d="M327.196 795.328c55.31-36.15 124.080-63.636 199.788-80.414-15.054-17.784-28.708-37.622-40.492-59.020-30.414-55.234-46.492-116.058-46.492-175.894 0-86.042 0-167.31 30.6-233.762 29.706-64.504 83.128-104.496 159.222-119.488-16.914-76.48-61.94-126.75-181.822-126.75-192 0-192 128.942-192 288 0 99.060 57.502 198.104 128 237.832v52.78c-217.102 17.748-384 124.42-384 253.388h279.006c14.518-12.91 30.596-25.172 48.19-36.672z"></path>
-        </symbol>
-        <symbol id="icon-comment" viewBox="0 0 1024 1024">
-            <title>comment</title>
-            <path class="path1" d="M512 895.008c-20.768 0-51.168-23.36-71.328-25.504-57.504 48.224-117.408 106.272-198.848 136.448-35.552 15.072-66.080 23.808-74.016 14.304-10.656-12.384-26.752-29.568-29.6-34.176 0.16-6.848 8.448-1.44 17.472-11.168 49.152-20.672 80.896-74.016 102.24-139.232-153.952-77.152-257.92-221.888-257.92-388.096 0-247.072 229.248-447.392 512-447.392s512 200.288 512 447.392-229.248 447.424-512 447.424z"></path>
-        </symbol>
-        <symbol id="icon-earth" viewBox="0 0 1024 1024">
-            <title>earth</title>
-            <path class="path1" d="M512 0c-282.77 0-512 229.23-512 512s229.23 512 512 512 512-229.23 512-512-229.23-512-512-512zM512 960.002c-62.958 0-122.872-13.012-177.23-36.452l233.148-262.29c5.206-5.858 8.082-13.422 8.082-21.26v-96c0-17.674-14.326-32-32-32-112.99 0-232.204-117.462-233.374-118.626-6-6.002-14.14-9.374-22.626-9.374h-128c-17.672 0-32 14.328-32 32v192c0 12.122 6.848 23.202 17.69 28.622l110.31 55.156v187.886c-116.052-80.956-192-215.432-192-367.664 0-68.714 15.49-133.806 43.138-192h116.862c8.488 0 16.626-3.372 22.628-9.372l128-128c6-6.002 9.372-14.14 9.372-22.628v-77.412c40.562-12.074 83.518-18.588 128-18.588 70.406 0 137.004 16.26 196.282 45.2-4.144 3.502-8.176 7.164-12.046 11.036-36.266 36.264-56.236 84.478-56.236 135.764s19.97 99.5 56.236 135.764c36.434 36.432 85.218 56.264 135.634 56.26 3.166 0 6.342-0.080 9.518-0.236 13.814 51.802 38.752 186.656-8.404 372.334-0.444 1.744-0.696 3.488-0.842 5.224-81.324 83.080-194.7 134.656-320.142 134.656z"></path>
-        </symbol>
-        <symbol id="icon-search" viewBox="0 0 1024 1024">
-            <title>search</title>
-            <path class="path1" d="M1014.88 926.496c12.192 12.192 12.192 31.968 0 44.192l-44.192 44.192c-12.224 12.192-32 12.192-44.192 0l-309.376-309.376c-3.36-3.36-5.6-7.328-7.104-11.552-63.456 46.368-141.376 74.048-226.016 74.048-212.064 0-384-171.936-384-384s171.936-384 384-384c212.064 0 384 171.936 384 384 0 84.64-27.68 162.56-74.048 226.016 4.224 1.504 8.192 3.712 11.552 7.104l309.376 309.376zM384 128c-141.376 0-256 114.624-256 256s114.624 256 256 256 256-114.624 256-256c0-141.376-114.624-256-256-256z"></path>
-        </symbol>
-    </defs>
-</svg>
-<!-- svg end -->
-<div id="header">
-    <!-- navtop begin -->
-    <div class="nav-bar-top">
-        <div class="container">
-            <div class="nav-link lt"><a href="http://www.baidu.com/">繁体版</a>|<a href="http://www.baidu.com/">无障碍阅读</a>|<a href="http://www.baidu.com/">手机版</a></div>
-            <div class="nav-weater lt">PM2.5:83微克/立方米　空气:轻度污染 多云 27~12℃</div>
-            <div class="nav-search rt">
-                <div class="rt nav-search-txt"><a href="">登录</a><a href="">注册</a></div>
-                <div class="rt nav-search-btn"><svg class="icon icon-search"><use xlink:href="#icon-search"></use></svg></div>
-                <div class="rt nav-search-input"><input class="nav-search-input-type" placeholder="搜索句容信息和服务" type="text"/></div>
+            <symbol id="icon-eye-outline" viewBox="0 0 1024 1024">
+                <path class="path1" d="M512 384c51.669 0 101.589 15.147 140.672 42.837 55.509 39.253 103.68 90.624 135.040 127.829-31.36 37.205-79.531 88.619-135.083 127.829-39.040 27.691-88.96 42.837-140.629 42.837s-101.632-15.147-140.757-42.837c-55.509-39.253-103.68-90.624-134.997-127.829 31.317-37.205 79.488-88.576 134.997-127.787 39.125-27.733 89.088-42.88 140.757-42.88zM512 298.667c-72.149 0-138.325 22.016-189.995 58.496-111.744 79.019-194.005 197.504-194.005 197.504s82.261 118.485 194.005 197.504c51.669 36.48 117.845 58.496 189.995 58.496s138.325-22.016 189.909-58.496c111.744-79.019 194.091-197.504 194.091-197.504s-82.347-118.485-194.091-197.504c-51.584-36.48-117.76-58.496-189.909-58.496z"></path>
+                <path class="path2" d="M512 512c-23.595 0-42.667 19.072-42.667 42.667 0 23.509 19.072 42.667 42.667 42.667 23.509 0 42.667-19.157 42.667-42.667 0-23.595-19.157-42.667-42.667-42.667z"></path>
+                <path class="path3" d="M512 682.667c-70.571 0-128-57.429-128-128s57.429-128 128-128 128 57.429 128 128-57.429 128-128 128zM512 469.333c-47.104 0-85.333 38.229-85.333 85.333s38.229 85.333 85.333 85.333 85.333-38.229 85.333-85.333-38.229-85.333-85.333-85.333z"></path>
+            </symbol>
+        </defs>
+    </svg>
+    <!-- svg end -->
+    <!-- content begin -->
+    <div class="information_list">
+        <!--列表导航 start-->
+        <div class="information_list_ng">
+            <div class="current_tt">
+                <CMSPRO_CHANNEL FIELD='channelName'>栏目1标题</CMSPRO_CHANNEL>
+            </div>
+            <div class="current_position">
+                <svg class="icon icon-location">
+                    <desc><i></i></desc>
+                    <use xlink:href="#icon-location"></use>
+                </svg>
+                当前位置：
+                <CMSPRO_LOCATION LINK=" &gt; " SELFONLY="false" AUTOLINK="true" TARGET="_blank" LINKEXTRA="" HOMEPAGEDESC="首页">当前位置</CMSPRO_LOCATION>
             </div>
             <div class="clear"></div>
         </div>
     </div>
-    <!-- navtop end -->
-    <!-- nav begin-->
-    <div class="nav-bar-inner">
-        <div class="container">
-            <a href="/" target="_blank" title="返回首页"><div class="nav-logo lt" id="logo"></div></a>
-            <div class="rt nav-collapse">
+    <!--列表导航  end-->
+    <!--详细内容 start-->
+    <div class="information_detail">
+        <div class="information_detail_tt">
+            <CMSPRO_DOCUMENT FIELD="title">标题</CMSPRO_DOCUMENT>
+        </div>
+        <div class="bt_x">
+            <p class="information_detail_rq" id="information_detail_rq" style="display:inline-block"><publishtime><CMSPRO_DOCUMENT FIELD="publishedTime" DATEFORMAT="yyyy-MM-dd">2012-12-12</CMSPRO_DOCUMENT></publishtime>&nbsp;&nbsp;来源：<CMSPRO_DOCUMENT FIELD="ly" DOMAINMETADATANAME="稿件元素据">来源</CMSPRO_DOCUMENT>&nbsp;&nbsp;作者：<CMSPRO_DOCUMENT FIELD="zz" DOMAINMETADATANAME="稿件元素据">来源</CMSPRO_DOCUMENT> 　</p>
+            <div class="information_detail_rq2" style="font-size:14px;">
                 <ul>
-                    <li class="icon-redo2">
-                        <a href="<CMSPRO_CHANNEL CODE='xwzx' FIELD='url'></CMSPRO_CHANNEL>">
-                            <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-newspaper"></use></svg></div>
-                            <div class="nav-text">新闻资讯</div></a>
-                    </li>
-                    <li class="icon-image"><a href="<CMSPRO_CHANNEL CODE='mljr' FIELD='url'></CMSPRO_CHANNEL>">
-                        <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-images"></use></svg></div>
-                        <div class="nav-text">魅力句容</div></a>
-                    </li>
-                    <li class="icon-book">
-                        <a href="<CMSPRO_CHANNEL CODE='xxgk' FIELD='url'></CMSPRO_CHANNEL>">
-                            <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-book"></use></svg></div>
-                            <div class="nav-text">信息公开</div>
-                        </a>
-                    </li>
-                    <li class="icon-users">
-                        <a href="<CMSPRO_CHANNEL CODE='ggfw' FIELD='url'></CMSPRO_CHANNEL>">
-                            <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-users"></use></svg></div>
-                            <div class="nav-text">公共服务</div>
-                        </a>
-                    </li>
-                    <li class="icon-earth">
-                        <a href="<CMSPRO_CHANNEL CODE='gzcy' FIELD='url'></CMSPRO_CHANNEL>">
-                            <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-comment"></use></svg></div>
-                            <div class="nav-text">公众参与</div>
-                        </a>
-                    </li>
-                    <li class="icon-stack">
-                        <a href="<CMSPRO_CHANNEL CODE='zqdh' FIELD='url'></CMSPRO_CHANNEL>">
-                            <div class="nav-icon"><svg class="icon icon-images"><use xlink:href="#icon-earth"></use></svg></div>
-                            <div class="nav-text">站群导航</div>
-                        </a>
-                    </li>
+                    <li><a id="xxtj"><svg class="icon icon-eye-outline"><desc><i></i></desc><use xlink:href="#icon-eye-outline"></use></svg><em>66</em></a></li>
+                    <li>|</li>
+                    <li><a href="#" class="bds_more bdsharebuttonbox" data-cmd="more" style="width:36px; font-size:14px;margin:8px 0 0 0;background:none">分享</a><script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin","hi"],"viewText":"分享到：","viewSize":"16"}};</script></li>
+                    <li>|</li>
+                    <li><a target="_self" href="javascript:window.print();">打印</a></li>
+                    <li>|</li>
+                    <li><a href="javascript:void(0)" id="big">放大字体</a></li>
+                    <li>|</li>
+                    <li><a href="javascript:void(0);" id="small">缩小字体</a></li>
                 </ul>
             </div>
         </div>
-    </div>
-    <!-- nav end-->
-</div>
-<!-- top end -->
-<!-- content begin-->
-<div id="page" class="container">
-    <!-- content begin-->
-    <div id="content">
+        <div class="bdsharebuttonbox" style="float:left; display:none;"></div>
 
     </div>
-    <!-- content end-->
-</div>
-<!-- content end-->
-<!-- footer begin-->
-<div id="footer">
-    <div class="container footer-inner">
-        <div class="footer-list"><a href="">网站留言</a>-<a href="">隐私保护</a>-<a href="">版权声明</a>-<a href="">保密声明</a></div>
-        <div class="footer-info">主办单位(版权所有): 句容市人民政府主办 苏ICP备11026848号-1</div>
-        <p>建议使用1024×768分辨率 16位以上颜色 IE8.0版本以上浏览器</p>
-        <div class="footer-other">
-            <img src="http://dcs.conac.cn/image/red.png" alt=""/>
-        </div>
+
+    <!--正文 start-->
+    <div class="information_zx" id="information_zx">
+        <ucapcontent>
+            <CMSPRO_DOCUMENT FIELD="content">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</CMSPRO_DOCUMENT>
+        </ucapcontent>
     </div>
+    <!--正文 end-->
 </div>
+<!-- content end -->
+<script type="text/javascript">
+    if(!window._bd_share_config) window._bd_share_config = {share : [{"bdSize" : 35}]};
+    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion='+~(-new Date()/36e5)];
+</script>
+<!-- footer begin-->
+<!--#include virtual="/jurong/bottom/footer.shtml"-->
 <!-- footer end-->
 </body>
 </html>
